# app-test-suite

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile.ats.mk  Pipfile  README.md  circleci.Dockerfile  container-entrypoint.sh  dats.sh  go.mod  go.sum  pyproject.toml  renovate.json5  run-tests-in-docker.sh  setup.py  testrunner.Dockerfile
.circleci/: config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  zz_generated.create_release.yaml  zz_generated.create_release_pr.yaml  zz_generated.gitleaks.yaml
app_build_suite/build_steps/: steps.py
app_test_suite/: __init__.py  __main__.py  cluster_manager.py  config.py  errors.py  gitops.py  version.py
app_test_suite/cluster_providers/: cluster_provider.py  external_cluster_provider.py  kind_cluster_provider.py
app_test_suite/steps/: __init__.py  base.py  base_test_runner.py  repositories.py  steps.py  test_types.py  types.py  upgrade_test_runner.py
app_test_suite/steps/executors/: __init__.py  gotest.py  pytest.py
app_test_suite/steps/gotest/: gotest.py
app_test_suite/steps/pytest/: pytest.py
app_test_suite/steps/scenarios/: __init__.py  simple.py  upgrade.py
container-crds/: README.md  gateway-api.yaml
container-gitops/: argo.yaml
docs/: CONTRIBUTING.md  TEST_CONTRACT.md  gotest-test-pipeline.md  helm3-build-pipeline.md  pytest-test-pipeline.md  tutorial.md  uv-migrate.md
docs/specs/: ats-test-time-controllers.md  test-time-controllers-contract.md
examples/apps/argo-bundle-app/: argo-bundle-app-0.1.0.tgz
examples/apps/argo-bundle-app/argo-bundle-app/: Chart.yaml
examples/apps/argo-bundle-app/argo-bundle-app/templates/: podinfo.yaml
examples/apps/argo-bundle-app/tests/ats/: pyproject.toml  test_argo_bundle.py
examples/apps/flux-bundle-app/.ats/: main.yaml
examples/apps/flux-bundle-app/flux-bundle-app/: Chart.yaml
examples/apps/hello-world-app/: hello-world-app-0.2.4-1.tgz  upgrade-hook.sh
examples/apps/hello-world-app/.ats/: main.yaml
examples/apps/hello-world-app/tests/ats/: Pipfile  example_integration_test.go  example_test.go  go.mod  go.sum  pyproject.toml  test_example.py
examples/apps/hello-world-go/: hello-world-app-0.2.3-90e2f60e6810ddf35968221c193340984236fe2a.tgz
examples/apps/hello-world-go/.ats/: main.yaml
examples/tutorial/: .kube-linter.yaml  Chart.yaml  values.schema.json  values.yaml
examples/tutorial/templates/: deployment.yaml  psp.yaml  rbac.yaml  service-account.yaml  service.yaml
hack/: sync-crds.sh  sync-gitops-manifests.sh
integration/test/metrics/: error.go  main_test.go  metrics_test.go
resources/ct_schemas/: gs_metadata_chart_schema.yaml
tests/: helpers.py  test_executor_detection.py  test_gitops.py  test_repositories.py
tests/assets/: mock_config.yaml  test_index.yaml  tested-upgrade-0.2.5.yaml
tests/build_steps/: test_helm.py
tests/build_steps/res_test_helm/: Chart.yaml  main.yaml
tests/e2e/: test_argo_bundle_app.py  test_example_app.py  test_flux_bundle_app.py
tests/gotest/: test_gotest_runner.py  test_gotest_upgrade_runner.py
tests/pytest/: test_pytest_runner.py  test_pytest_upgrade_runner.py
tests/scenarios/: test_cluster_manager.py  test_diagnostics.py  test_env_vars.py  test_simple_scenarios.py  test_steps_filtering.py  test_upgrade_scenario.py
tests/scenarios/executors/: gotest.py  pytest.py  test_test_dir_resolution.py
tests/scenarios/pytest/: test_simple_scenarios.py  test_upgrade_scenario.py
(+6 files in other folders)
